# rotoreader

./: .dockerignore  CHANGELOG.md  Dockerfile  docker-compose.yml  feedsworkspace.ipynb  justfile  main.py  pyproject.toml  test.http
.github/workflows/: release.yml
src/newsreader/: config.py
src/newsreader/model/: constants.py  feeddata.py
src/newsreader/service/: feedsreader.py
src/rotoreader/: __init__.py  app.py  config.py  constants.py  utils.py
src/rotoreader/adapters/: postgres_client.py
src/rotoreader/model/: collection.py  feeddata.py  healthstatus.py  teamdata.py
src/rotoreader/service/: __init__.py  feedsreader.py  teamprofiler.py
test/: conftest.py  test_db.py  test_model.py  test_pgvector_example.py
